--- a/src/teacher/index.html
+++ b/src/teacher/index.html
@@ -131,7 +131,7 @@
           <h3>task</h3>
           <div class="desc">descriptiondescriptiondescriptiondescription</div>
           <date>12 Feb 2021</date>
-          <input name="grade" type="number" required placeholder="Put your grade (0-10)" />
+          <input name="grade" min="0" max="10" type="number" required placeholder="Put your grade (0-10)" />
           <button type="submit">Submit</button>
         </form>
       </div>
