start wiring up api

--- a/src/student/index.html
+++ b/src/student/index.html
@@ -133,6 +133,6 @@
       </div>
     </div>
   </div>
-  <script type="module" src="app.ts"></script>
+  <script type="module" src="app.tsx"></script>
 </body>
 </html>
