--- a/src/student/index.html
+++ b/src/student/index.html
@@ -88,10 +88,7 @@
 <body>
   <header>
     <h1>Student Dashboard</h1>
-    <select name="subjects" id="subjects">
-      <option value="backend">Backend</option>
-      <option value="ds">Data Science</option>
-    </select>
+    <div name="subjects" id="subjects"></div>
   </header>
   <div id="app">
     <div>
