--- a/src/student/index.html
+++ b/src/student/index.html
@@ -22,9 +22,9 @@
     h2 {
       font-size: 48px;
     }
-    #app {
+    main {
       background-color: rgb(195, 138, 225);
-      height: 80vh;
+      min-height: 80vh;
       width: 90%;
       margin: 0 auto;
       border-radius: 16px;
@@ -34,7 +34,7 @@
       padding: 48px;
       box-sizing: border-box;
     }
-    #app > div {
+    section {
       height: 100%;
       width: 100%;
       border-radius: inherit;
@@ -43,7 +43,10 @@
       flex-direction: column;
       align-items: center;
     }
-    #app > div > div {
+    section > div {
+      width: 100%;
+    }
+    div div {
       width: 100%;
       height: 100%;
       display: flex;
@@ -90,46 +93,23 @@
     <h1>Student Dashboard</h1>
     <div name="subjects" id="subjects"></div>
   </header>
-  <div id="app">
-    <div>
+   <main>
+    <section>
       <h2>Todo</h2>
       <div id="todo">
-        <form action="/submit_task.php" method="POST" class="task">
-          <h3>task</h3>
-          <div class="desc">descriptiondescriptiondescriptiondescription</div>
-          <date>12 Feb 2021</date>
-          <input type="file" name="file" />
-        </form>
       </div>
-    </div>
-    <div>
+    </section>
+    <section>
       <h2>Submitted</h2>
       <div id="submitted">
-        <div class="task">
-          <h3>task</h3>
-          <div class="desc">descriptiondescriptiondescriptiondescription</div>
-          <date>12 Feb 2022</date>
-        </div>
       </div>
-    </div>
-    <div>
+    </section>
+    <section>
       <h2>Graded</h2>
       <div id="graded">
-        <div class="task">
-          <h3>task</h3>
-          <div class="desc">descriptiondescriptiondescriptiondescription</div>
-          <date>12 Feb 2022</date>
-          <div>Grade: <span class="grade">3/10</span></div>
-        </div>
-        <div class="task">
-          <h3>task</h3>
-          <div class="desc">descriptiondescriptiondescriptiondescription</div>
-          <date>12 Feb 2022</date>
-          <div>Grade: <span class="grade">8/10</span></div>
-        </div>
       </div>
-    </div>
-  </div>
+    </section>
+   </main>
   <script type="module" src="app.tsx"></script>
 </body>
 </html>
